Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

09-Jan-2012 Jean-Marie Simonet
 # [#27671] Hathor Global configuration not working. Thanks Andrea.

08-Jan-2012 Mark Dexter
 # Revert [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias" (Bernie Sumption)

08-Jan-2012 Jean-Marie Simonet
 # [#27551] Smart Search patch to show warning if content plug-in not enabled. Thanks Chris.
 # [#27580] Smart Search - Duplicate Code Cleanup, Strict Errors with FinderControllerUpdater. Thanks Michael
 # [#27631] Smart Search indexing does not properly account for item published states. Thanks Michael and Chris.
 # [#27584] Search from smart search module is producing two item ids. Thanks Elin and Andrea.
 # [#27654] Smart Search - Fix use of CHAR_LENGTH MySQL command. Thanks Michael.
 #$ [#27657] *Multidb: can not install without mysql support. Thanks Nikolai and Andrea
 #$ [#27646] *Add a check for Magic Quotes GPC to the installation. Thanks Rouven
 #$ [#27346] *Installation problem on step 1 - server without JSON. Thanks Rouven.
 $ [#27665] Smart search content plug-in screen name. Thanks Chris.

07-Jan-2012 Christophe Demko
 # [#24634] Menu items don't become active (i.e. highlight) if the Menu Item Type is "Menu Item Alias" (Bernie Sumption)

07-Jan-2012 Jean-Marie Simonet
 # [#27636] Option to disable Smart Search autocompleter missing from user interface. Thanks Chris

06-Jan-2012 Christophe Demko
 # [#24533] Last updated on article without updating it bugs (bill richardson)
 # [#24712] Module, template, and plugin preprocess forms not passing content group or any group to allow editing via the onContentPrepareForm plugin event (Brian Towles)
 # [#25790] Some queries not correctly dealing with trash (Mark Dexter)