@@ -9,7 +9,13 @@
 
 /* Unpublished */
 .system-unpublished, tr.system-unpublished {
-background: #e8edf1;
-border-top: 4px solid #c4d3df;
-border-bottom: 4px solid #c4d3df;
+	background: #e8edf1;
+	border-top: 4px solid #c4d3df;
+	border-bottom: 4px solid #c4d3df;
+}
+
+span.highlight {
+	background-color:#FFFFCC;
+	font-weight:bold;
+	padding:1px 4px;
 }
